Bug 475109 - The color picker plugin doesn't work properly.
Summary: The color picker plugin doesn't work properly.
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: general (other bugs)
Version First Reported In: 23.08.1
Platform: Manjaro Linux
: NOR minor
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-10-01 20:01 UTC by Parsa
Modified: 2024-04-01 19:50 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
That shows the problem. (8.30 KB, image/png)
2023-10-01 20:01 UTC, Parsa
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Parsa 2023-10-01 20:01:57 UTC
Created attachment 162011 [details]
That shows the problem.

SUMMARY
***
NOTE: If you are reporting a crash, please try to attach a backtrace with debug symbols.
See https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***


STEPS TO REPRODUCE
1. Enable color picker plugin in settings.
2. Type a color code in your editor that kate can detect it's a color code.(there must be a preview of the color you've typed) 
3. Place your cursor everywhere before the color code.
4.Click enter button.
5.It always make a black box that works but must not be there.

OBSERVED RESULT
It always make a black box that works but must not be there.

EXPECTED RESULT


SOFTWARE/OS VERSIONS
Linux/KDE Plasma: linux 6.1.53-1-MANJARO (64-bit)
(available in About System)
KDE Plasma Version: 5.27.8
KDE Frameworks Version: 5.110.0
Qt Version: 5.15.10

ADDITIONAL INFORMATION
Comment 1 Christoph Cullmann 2023-12-28 20:49:41 UTC
The preview plugin is not maintained, if you want to have this improved, please
submit a merge request, otherwise that will stay the way it is at the moment.

https://kate-editor.org/join-us/

I am sorry that does create issues for you, but the only other fix would be to remove it.
Comment 2 Kåre Särs 2023-12-29 06:18:52 UTC
Hmm... I wonder if this got closed by mistake.... It is not about the preview plugin (but it does have the word in it)
Comment 3 Christoph Cullmann 2023-12-29 08:25:23 UTC
(In reply to Kåre Särs from comment #2)
> Hmm... I wonder if this got closed by mistake.... It is not about the
> preview plugin (but it does have the word in it)

Yeah, sorry, that had the wrong component.
Comment 4 Bug Janitor Service 2024-03-30 20:57:25 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/kate/-/merge_requests/1439
Comment 5 Waqar Ahmed 2024-04-01 19:50:51 UTC
Git commit 6731bcb16c5d001b5a1a99ed63e9af2ea48ac6fe by Waqar Ahmed.
Committed on 01/04/2024 at 19:50.
Pushed by waqar into branch 'master'.

ColorPicker: connect to line wrap/unwrap signals

M  +6    -0    addons/colorpicker/katecolorpickerplugin.cpp

https://invent.kde.org/utilities/kate/-/commit/6731bcb16c5d001b5a1a99ed63e9af2ea48ac6fe