ColorPicker: connect to line wrap/unwrap signals

BUG: 475109